--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "simple-git-changelog",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A simple AWK script to generate changelogs from your Git history.",
   "main": "index.js",
+  "config": {
+    "changelog_file": "./CHANGELOG"
+  },
   "bin": {
     "changelog": "./changelog.awk"
   },
   "scripts": {
     "changelog": "./changelog.awk",
+    "changelog:make": "npm run changelog > $npm_package_config_changelog_file",
+    "version": "npm run changelog:make && git add $npm_package_config_changelog_file",
+    "postversion": "git push origin && git push origin --tags",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
