--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-git-changelog",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A simple AWK script to generate changelogs from your Git history.",
   "main": "index.js",
   "config": {
@@ -12,8 +12,8 @@
   "scripts": {
     "changelog": "./changelog.awk",
     "changelog:make": "npm run changelog > $npm_package_config_changelog_file",
-    "version": "npm run changelog:make && git add $npm_package_config_changelog_file",
-    "postversion": "git push origin && git push origin --tags",
+    "changelog:update": "npm run changelog:make && git add $npm_package_config_changelog_file && git commit -m 'Update $npm_package_config_changelog_file'",
+    "postversion": "npm run changelog:update && git push origin && git push origin --tags",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
