--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-git-changelog",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A simple AWK script to generate changelogs from your Git history.",
   "main": "index.js",
   "config": {
@@ -10,9 +10,8 @@
     "changelog": "./changelog.awk"
   },
   "scripts": {
-    "changelog": "./changelog.awk",
-    "changelog:make": "npm run changelog > $npm_package_config_changelog_file",
-    "changelog:update": "npm run changelog:make && git add $npm_package_config_changelog_file && git commit -m 'Update $npm_package_config_changelog_file'",
+    "changelog": "./changelog.awk > $npm_package_config_changelog_file",
+    "changelog:update": "npm run changelog && git add $npm_package_config_changelog_file && git commit -m 'Update CHANGELOG'",
     "postversion": "npm run changelog:update && git push origin && git push origin --tags",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
