--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "A simple AWK script to generate changelogs from your Git history.",
   "main": "index.js",
   "config": {
-    "changelog_file": "./CHANGELOG"
+    "changelog_file": "./CHANGELOG.md"
   },
   "bin": {
     "changelog": "./changelog.awk"
   },
   "scripts": {
     "changelog": "./changelog.awk > $npm_package_config_changelog_file",
-    "changelog:update": "npm run changelog && git add $npm_package_config_changelog_file && git commit -m 'Update CHANGELOG'",
-    "postversion": "npm run changelog:update && git push origin && git push origin --tags",
+    "changelog:update": "npm run changelog && git add $npm_package_config_changelog_file && git commit -m 'Update CHANGELOG.md'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
